Address layout issue when view_rev=true from article history

--- a/root/styles/prosilver/theme/kb.css
+++ b/root/styles/prosilver/theme/kb.css
@@ -40,6 +40,11 @@ textarea.desc {
 	clear:none;
 }
 
+#kb_postbody .error .inner span.corners-bottom {
+	clear:none;
+	padding-bottom:30px;
+}
+
 #kb_postbody .post #cat .corners-bottom{
 	clear:none;
 }
